--- a/src/sample/commandLineBasics/alias.fxml
+++ b/src/sample/commandLineBasics/alias.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -18,23 +20,14 @@
       <VBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <MenuBar style="-fx-background-color: grey;">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
+               <menus>
+                  <Menu mnemonicParsing="false" text="File">
+                     <items>
+                        <MenuItem fx:id="HelpBtn" mnemonicParsing="false" onAction="#HelpBtnClick" text="Learnix Website" />
+                        <MenuItem fx:id="CloseBtn" mnemonicParsing="false" onAction="#CloseBtnClick" text="Close the Application" />
+                     </items>
+                  </Menu>
+               </menus>
             </MenuBar>
             <Button fx:id="backBtn" mnemonicParsing="false" onAction="#backBtnClick" text="Back to lessons">
                <VBox.margin>
@@ -45,7 +38,7 @@
                   <Font size="24.0" />
                </font>
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </Label>
          </children>
@@ -68,7 +61,10 @@
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Some commands can get really repetitive, especially when they're really long or contain lots of flags&#10;&#10;Luckily you can create an alias, once you create an alias for a command, when you run the alias it will run the full command for you saving you precious seconds in your day&#10;" wrappingWidth="441.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
-               </font></Text>
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin></Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="alias lsa='ls -la'" wrappingWidth="325.0">
                <font>
                   <Font name="Lucida Console" size="15.0" />
@@ -81,6 +77,9 @@
                <font>
                   <Font size="15.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
             </Text>
             <Text fill="WHITE" layoutX="48.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="alias lsa='ls -la'" wrappingWidth="325.0">
                <font>
@@ -94,21 +93,11 @@
                <font>
                   <Font size="15.0" />
                </font>
-            </Text>
-            <Text fill="WHITE" layoutX="48.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="lsa" wrappingWidth="325.0">
-               <font>
-                  <Font name="Lucida Console" size="15.0" />
-               </font>
                <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="18.0" layoutY="347.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This doesn't save after a reboot though, if you want it to be perminant you have to save it in" wrappingWidth="441.0">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutX="48.0" layoutY="395.0" strokeType="OUTSIDE" strokeWidth="0.0" text="~/.bashrc" wrappingWidth="325.0">
+            <Text fill="WHITE" layoutX="48.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="lsa" wrappingWidth="325.0">
                <font>
                   <Font name="Lucida Console" size="15.0" />
                </font>
@@ -134,10 +123,29 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="This doesn't save after a reboot though, if you want it to be perminant you have to save it in" wrappingWidth="441.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="~/.bashrc" wrappingWidth="325.0">
+               <font>
+                  <Font name="Lucida Console" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </VBox.margin>
+            </Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You can also remove an alias with the unalias command (remember to change 'lsa' to whatever alias you made)" wrappingWidth="441.0">
                <font>
                   <Font size="15.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
             </Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="unalias lsa" wrappingWidth="325.0">
                <font>
@@ -147,11 +155,19 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Region prefHeight="473.0" prefWidth="449.0" />
+            <ImageView fitHeight="266.0" fitWidth="418.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Assets/aliasS.png" />
+               </image>
+               <VBox.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </VBox.margin>
+            </ImageView>
+            <Region prefHeight="247.0" prefWidth="478.0" />
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Region prefHeight="52.0" prefWidth="418.0" />
-                  <Button fx:id="nextBtn1" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="33.0" prefWidth="135.0" text="Next" textAlignment="RIGHT">
+                  <Region prefHeight="37.0" prefWidth="340.0" />
+                  <Button fx:id="nextBtn1" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="35.0" prefWidth="130.0" text="Next" textAlignment="RIGHT">
                      <padding>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                      </padding>
