--- a/src/sample/commandLineBasics/exit.fxml
+++ b/src/sample/commandLineBasics/exit.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
@@ -18,23 +20,14 @@
       <VBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <MenuBar style="-fx-background-color: grey;">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
+               <menus>
+                  <Menu mnemonicParsing="false" text="File">
+                     <items>
+                        <MenuItem fx:id="HelpBtn" mnemonicParsing="false" onAction="#HelpBtnClick" text="Learnix Website" />
+                        <MenuItem fx:id="CloseBtn" mnemonicParsing="false" onAction="#CloseBtnClick" text="Close the Application" />
+                     </items>
+                  </Menu>
+               </menus>
             </MenuBar>
             <Button fx:id="backBtn" mnemonicParsing="false" onAction="#backBtnClick" text="Back to lessons">
                <VBox.margin>
@@ -45,7 +38,7 @@
                   <Font size="24.0" />
                </font>
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </Label>
          </children>
@@ -68,7 +61,10 @@
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="You have finished this section, that's the basics covered!&#10;&#10;Since the basics are covered you probably want to know how to exit from the shell so you can go make a cup of tea or coffee. For that you use the exit command&#10;&#10;" wrappingWidth="404.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
-               </font></Text>
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin></Text>
             <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="exit" wrappingWidth="325.0">
                <font>
                   <Font name="Lucida Console" size="15.0" />
@@ -77,7 +73,7 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
-            <Text fill="WHITE" layoutX="18.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Or the logout command" wrappingWidth="404.0">
+            <Text fill="WHITE" layoutX="18.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Or the logout command to logout from the shell." wrappingWidth="404.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -93,6 +89,14 @@
                   <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
                </VBox.margin>
             </Text>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Assets/exit.png" />
+               </image>
+               <VBox.margin>
+                  <Insets bottom="50.0" left="70.0" right="50.0" top="50.0" />
+               </VBox.margin>
+            </ImageView>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
@@ -119,7 +123,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Region prefHeight="196.0" prefWidth="89.0" />
+            <Region prefHeight="317.0" prefWidth="463.0" />
             <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="94.0" prefWidth="451.0" text="Congratulations you have completed this section! &#10;Back to lessons" textAlignment="CENTER">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
