--- a/src/sample/commandLineBasics/terminalIntro.fxml
+++ b/src/sample/commandLineBasics/terminalIntro.fxml
@@ -20,23 +20,14 @@
       <VBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <MenuBar style="-fx-background-color: grey;">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
+               <menus>
+                  <Menu mnemonicParsing="false" text="File">
+                     <items>
+                        <MenuItem fx:id="HelpBtn" mnemonicParsing="false" onAction="#HelpBtnClick" text="Learnix Website" />
+                        <MenuItem fx:id="CloseBtn" mnemonicParsing="false" onAction="#CloseBtnClick" text="Close the Application" />
+                     </items>
+                  </Menu>
+               </menus>
             </MenuBar>
             <Button fx:id="backBtn" mnemonicParsing="false" onAction="#backBtnClick" text="Back to lessons">
                <VBox.margin>
@@ -86,11 +77,19 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </ImageView>
-            <Region prefHeight="154.0" prefWidth="484.0" />
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Alternative names for the Terminal: &#10;- Console&#10;- Shell&#10;- Command Line&#10;- Command Line Interface (CLI)">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <Region prefHeight="10.0" prefWidth="484.0" />
+            <HBox prefHeight="4.0" prefWidth="484.0">
                <children>
-                  <Region prefHeight="52.0" prefWidth="418.0" />
-                  <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" text="Next" textAlignment="RIGHT">
+                  <Region prefHeight="0.0" prefWidth="348.0" />
+                  <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="35.0" prefWidth="130.0" text="Next" textAlignment="RIGHT">
                      <padding>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                      </padding>
@@ -114,7 +113,7 @@
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
             </ImageView>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="This is a Terminal, specifically the Terminal that is on the Operating System Ubuntu.&#10;&#10;Each 'flavour' of GNU/Linux, such as Ubuntu, Fedora, Linux Mint, all have different appearences, but the main functionality is the same.&#10;&#10;Don't worry if a Terminal looks a little different, your commands will still work!" wrappingWidth="492.58203125">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="What is a Terminal? A terminal is an interface where you can type and execute text based commands. &#10;&#10;Why should I use it? It can be much quicker to do something with a text command than it can do by using a graphical interface and your mouse.&#10;&#10;Example: Instead of having to open up your files, navigate where you want, right click and press &quot;New folder&quot;, you can do all of that in one command." wrappingWidth="492.58203125">
                <font>
                   <Font size="15.0" />
                </font>
