--- a/src/sample/commandLineBasics/touch.fxml
+++ b/src/sample/commandLineBasics/touch.fxml
@@ -86,6 +86,9 @@
                <font>
                   <Font size="15.0" />
                </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
             </Text>
          </children>
          <BorderPane.margin>
@@ -157,11 +160,11 @@
                   </Label>
                </children>
             </HBox>
-            <Region prefHeight="128.0" prefWidth="329.0" />
+            <Region prefHeight="292.0" prefWidth="466.0" />
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Region prefHeight="100.0" prefWidth="390.0" />
-                  <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="33.0" prefWidth="117.0" text="Next" textAlignment="RIGHT">
+                  <Region prefHeight="73.0" prefWidth="290.0" />
+                  <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="35.0" prefWidth="135.0" text="Next" textAlignment="RIGHT">
                      <HBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </HBox.margin>
