--- a/src/sample/systemPackages/compressedFiles.fxml
+++ b/src/sample/systemPackages/compressedFiles.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.compressedFilesController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.compressedFilesController">
    <top>
       <VBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -36,10 +36,10 @@
                   <Font size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets />
                </VBox.margin>
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </Label>
          </children>
@@ -59,13 +59,45 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Many files online that you come across are often archived (compressed), you may know .zip or .rar files. If you don’t, an archive is an archive of files, inside of an archive you will find many files. An archive is an easy way of sending multiple files in one easy download. They can also compress file sizes, making them smaller to download than the full file sizes on their own.&#10;&#10;On GNU/Linux you can use gzip to compress files. Instead of .zip they use .gz.&#10;&#10;To compress a file down run gzip and the name of the file you want to compress&#10;&#10;gzip homework&#10;&#10;To decompress the file you use gunzip (g un-zip) and the name of the file. &#10;&#10;gunzip homework.gz&#10;&#10;That’s all well and good for compressing file sizes, but gzip can’t add multiple files, luckily there is another way, it’s called tar. Tar is a little more complicated than gzip. (Remember man pages if you want to learn more about a command: man tar)&#10;&#10;&#10;&#10;" wrappingWidth="470.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Many files online that you come across are often archived (compressed), you may know .zip or .rar files. If you don’t, an archive is an archive of files, inside of an archive you will find many files. An archive is an easy way of sending multiple files in one easy download. They can also compress file sizes, making them smaller to download than the full file sizes on their own.&#10;&#10;On GNU/Linux you can use gzip to compress files. Instead of .zip they use .gz.&#10;&#10;To compress a file down run gzip and the name of the file you want to compress&#10;" wrappingWidth="470.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin></Text>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="gzip homework" wrappingWidth="325.0">
+               <font>
+                  <Font name="Lucida Console" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="30.0" right="30.0" top="20.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="23.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="To decompress the file you use gunzip (g un-zip) and the name of the file. " wrappingWidth="470.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="18.0" layoutY="485.0" strokeType="OUTSIDE" strokeWidth="0.0" text="guzip homework.gz" wrappingWidth="325.0">
+               <font>
+                  <Font name="Lucida Console" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" left="30.0" right="30.0" top="20.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="18.0" layoutY="291.0" strokeType="OUTSIDE" strokeWidth="0.0" text="That’s all well and good for compressing file sizes, but gzip can’t add multiple files, luckily there is another way, it’s called tar. Tar is a little more complicated than gzip. (Remember man pages if you want to learn more about a command: man tar)" wrappingWidth="470.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
          </children>
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
@@ -76,7 +108,7 @@
       </VBox>
    </left>
    <right>
-      <VBox prefHeight="572.0" prefWidth="505.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="657.0" prefWidth="496.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
          </BorderPane.margin>
@@ -84,7 +116,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So lets say you want to send some pictures to a friend, it’s easier to send them in a single .tar rather than 3 separate downloads. Use the tar command, the appropriate flags, then the name of what you want the archive to be called. Leave spaces between that, then each file you want to add.&#10;&#10;tar -cvf holidaysnaps.tar holidayphoto1 holidayphoto2 holiday photo3&#10;&#10;The flags used:&#10;&#10;c – Create, this is because you want to create a new archive&#10;v -  Vervose, this tell the program to be verbose and let us see what it's doing&#10;f -  Filename, this means you can create a filename for your .tar file.&#10;&#10;To extract the contents of a tar file, use:&#10;&#10; tar -xvf myholidaysnaps.tar&#10;&#10;x – Extract&#10;v – Verbose, this tell the program to be verbose and let us see what it's doing&#10;f -  Filename, tells tar that the next parameter is the file name of the archive" wrappingWidth="456.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="So lets say you want to send some pictures to a friend, it’s easier to send them in a single .tar rather than 3 separate downloads. Use the tar command, the appropriate flags, then the name of what you want the archive to be called. Leave spaces between that, then each file you want to add." wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -92,7 +124,38 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Text>
-            <Region prefHeight="473.0" prefWidth="449.0" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="tar -cvf holidaysnaps.tar holidayphoto1 holidayphoto2 holidayphoto3" wrappingWidth="446.0">
+               <font>
+                  <Font name="Lucida Console" size="11.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="25.0" left="30.0" right="30.0" top="25.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="23.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="The flags used:&#10;&#10;c – Create, this is because you want to create a new archive&#10;v -  Vervose, this tell the program to be verbose and let us see what it's doing&#10;f -  Filename, this means you can create a filename for your .tar file.&#10;&#10;To extract the contents of a tar file, use:" wrappingWidth="456.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="18.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="tar -xvf holidaysnaps.tar" wrappingWidth="325.0">
+               <font>
+                  <Font name="Lucida Console" size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="25.0" left="30.0" right="30.0" top="25.0" />
+               </VBox.margin>
+            </Text>
+            <Text fill="WHITE" layoutX="18.0" layoutY="228.0" strokeType="OUTSIDE" strokeWidth="0.0" text="x – Extract&#10;v – Verbose, this tell the program to be verbose and let us see what it's doing&#10;f -  Filename, tells tar that the next parameter is the file name of the archive" wrappingWidth="456.0">
+               <font>
+                  <Font size="15.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </Text>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Region prefHeight="52.0" prefWidth="418.0" />
