--- a/src/sample/usersAndGroups/etcShadow.fxml
+++ b/src/sample/usersAndGroups/etcShadow.fxml
@@ -20,23 +20,14 @@
       <VBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <MenuBar style="-fx-background-color: grey;">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                  </items>
-                </Menu>
-              </menus>
+               <menus>
+                  <Menu mnemonicParsing="false" text="File">
+                     <items>
+                        <MenuItem fx:id="HelpBtn" mnemonicParsing="false" onAction="#HelpBtnClick" text="Learnix Website" />
+                        <MenuItem fx:id="CloseBtn" mnemonicParsing="false" onAction="#CloseBtnClick" text="Close the Application" />
+                     </items>
+                  </Menu>
+               </menus>
             </MenuBar>
             <Button fx:id="backBtn" mnemonicParsing="false" onAction="#backBtnClick" text="Back to lessons">
                <VBox.margin>
@@ -47,10 +38,10 @@
                   <Font size="24.0" />
                </font>
                <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  <Insets />
                </VBox.margin>
                <padding>
-                  <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                  <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
             </Label>
          </children>
@@ -76,7 +67,7 @@
    <left>
       <VBox prefHeight="591.0" prefWidth="484.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="As briefly mentioned in the last page, /etc/shadow is for storing user authentication, such as passwords.&#10;&#10;It required a superuser to read the permissions. (Remember sudo!)&#10;&#10;All passwords are in an encrypted format, they aren't stored in plain text so they're nice and secure.&#10;&#10;Much like the /etc/passwd file each line is for a user and there are fields seperated by colons (:)." wrappingWidth="470.0" VBox.vgrow="ALWAYS">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="As briefly mentioned in the last page, /etc/shadow is for storing user authentication, such as passwords.&#10;&#10;It required a superuser to read the permissions. (Remember sudo!)&#10;&#10;All passwords are in an encrypted format, they aren't stored in plain text so they're nice and secure.&#10;&#10;Much like the /etc/passwd file each line is for a user and there are fields separated by colons (:)." wrappingWidth="470.0" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="15.0" />
                </font>
@@ -97,7 +88,7 @@
                </font>
             </Text>
             <Region prefHeight="91.0" prefWidth="480.0" />
-            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="29.0" prefWidth="60.0" text="Back">
+            <Button fx:id="cdBackBtn" mnemonicParsing="false" onAction="#cdBackBtnClick" prefHeight="35.0" prefWidth="130.0" text="Back">
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                </padding>
@@ -123,7 +114,7 @@
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </padding>
          <children>
-            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="1: Username&#10;&#10;2: Password, this is the user's encrypted password, the password should be 8-32 characters long, preferably including special characters, numbers, upper and lower case. The stronger the better.&#10;&#10;3: Last password change (lastchanged), it counts how many days since 1st January 1970 when the password was last changed,If there is a 0 that means the user should change their password the next time they login&#10;&#10;4: Minimum, Days that a user will have to wait before being able to change their password again&#10;&#10;5: Maximum, Maximum number of days before a user has to change their password&#10;&#10;6: Warn, the number of days before the password is to expire&#10;&#10;7: Password inactivity period, the number of days after a password has expired to allow login with their password&#10;&#10;8: Account expiration date, the date that user will not be able to login" wrappingWidth="456.0">
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="1: Username&#10;&#10;2: Password, this is the user's encrypted password, the password should be 8-32 characters long, preferably including special characters, numbers, upper and lower case. The stronger the better.&#10;&#10;3: Last password change (lastchanged), it counts how many days since 1st January 1970 when the password was last changed, if there is a 0 that means the user should change their password the next time they login&#10;&#10;4: Minimum, Days that a user will have to wait before being able to change their password again&#10;&#10;5: Maximum, Maximum number of days before a user has to change their password&#10;&#10;6: Warn, the number of days before the password is to expire&#10;&#10;7: Password inactivity period, the number of days after a password has expired to allow login with their password&#10;&#10;8: Account expiration date, the date that user will not be able to login" wrappingWidth="456.0">
                <font>
                   <Font size="15.0" />
                </font>
@@ -131,10 +122,11 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Text>
+            <Region prefHeight="120.0" prefWidth="480.0" />
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <Region prefHeight="52.0" prefWidth="418.0" />
-                  <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="33.0" prefWidth="56.0" text="Next" textAlignment="RIGHT">
+                  <Button fx:id="nextBtn" mnemonicParsing="false" onAction="#nextBtnClick" prefHeight="35.0" prefWidth="130.0" text="Next" textAlignment="RIGHT">
                      <padding>
                         <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
                      </padding>
